[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Elements/Vase.png" type="Texture" id=1]
[ext_resource path="res://Elements/Vase.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 1 )

[node name="Vase" type="RigidBody2D" groups=[
"Vase",
]]
collision_layer = 128
collision_mask = 6
gravity_scale = 4.0
contacts_reported = 4
contact_monitor = true
sleeping = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -265, -141 )
rect = Rect2( 0, 0, 533.333, 300 )
process_parent = true
physics_process_parent = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_screen_exited"]
